<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_view_height"
                android:background="@color/White">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="毕业设计 (论文) 任务下达表"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/BackgroundColor">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/DividerLineGray" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_view_height"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="题目"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_task_projectName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@+id/tv_1"
                    android:gravity="end|center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/AssistantGray"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/DividerLineGray" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_view_height"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="title"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_task_projectName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@+id/tv_2"
                    android:background="@null"
                    android:focusable="true"
                    android:gravity="end|center_vertical"
                    android:hint="英文题目"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/AssistantGray"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/DividerLineGray" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:paddingLeft="10dp"
                    android:singleLine="false"
                    android:text="一.         题目来源"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@color/DividerLineGray" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="选择合适的项目类型" />


                <RadioGroup
                    android:id="@+id/rg_project_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/project_type1" />

                    <RadioButton
                        android:id="@+id/rb_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/project_type2" />

                    <RadioButton
                        android:id="@+id/rb_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/project_type3" />

                    <RadioButton
                        android:id="@+id/rb_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/project_type4" />

                </RadioGroup>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DividerLineGray" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:paddingLeft="10dp"
                    android:singleLine="false"
                    android:text="二.         设计要求 设计参数"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@color/DividerLineGray" />

                <EditText
                    android:id="@+id/et_design_require"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:hint="请输入相关信息"
                    android:maxLength="1000"
                    android:minLines="10"
                    android:paddingBottom="15dp"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/Black"
                    android:textColorHint="@color/AssistantGray"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DividerLineGray" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:paddingLeft="10dp"
                    android:singleLine="false"
                    android:text="三.         个人工 作重点"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@color/DividerLineGray" />

                <EditText
                    android:id="@+id/et_work_importance"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:hint="请输入相关信息"
                    android:maxLength="1000"
                    android:minLines="10"
                    android:paddingBottom="15dp"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/Black"
                    android:textColorHint="@color/AssistantGray"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DividerLineGray" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:paddingLeft="10dp"
                    android:singleLine="false"
                    android:text="四.         各阶段时间安排,应完成的工作量"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@color/DividerLineGray" />

                <EditText
                    android:id="@+id/et_time_arrange"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:hint="请输入相关信息"
                    android:maxLength="1000"
                    android:minLines="10"
                    android:paddingBottom="15dp"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/Black"
                    android:textColorHint="@color/AssistantGray"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DividerLineGray" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:paddingLeft="10dp"
                    android:singleLine="false"
                    android:text="五.         阅读资料 参考文献"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@color/DividerLineGray" />

                <EditText
                    android:id="@+id/et_reference_detail"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:hint="请输入相关信息"
                    android:maxLength="1000"
                    android:minLines="10"
                    android:paddingBottom="15dp"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/Black"
                    android:textColorHint="@color/AssistantGray"
                    android:textSize="16sp" />
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DividerLineGray" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/DividerLineGray" />

            <Button
                android:id="@+id/bt_task_release_save"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_button_height"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="保存"
                android:textColor="@color/common_text_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/DividerLineGray" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>